# piper-chess

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
public/: index.html  manifest.json
server/: Cargo.toml
server/mocks/: mock.json
server/src/: main.rs  response.rs  tests.rs
server/src/gameplay/: board.rs  cells.rs  mod.rs  moves.rs  pieces.rs  players.rs
src/: definitions.js  index.js  smoke.test.js
src/components/board/: board.css  board.js  board.test.js
src/components/player/: player.css  player.js
src/components/timer/: timer.css  timer.js
src/router/: router.js
src/routes/404/: 404.js
src/routes/home/: home.css  home.js
