[package]
name = "piper-chess"
version = "0.1.0"
edition = "2021"
authors = ["Bruno Silva"]
description = "A speedy chess game API backend written in Rust. Piper Chess for short"
repository = "https://github.com/brunogrcsada/piper-chess"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
actix-cors = "0.6.1"
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
wiremock = "0.5.13"
